# RoadVisionAI

./: .env.example  .gitignore  README.md  docker-compose.yml  test_gemini.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema_v4_2.py
backend/app/: main.py
backend/app/ai/agents/: gemini_provider.py  recommendation_pipeline.py
backend/app/ai/detection/: class_mapping.py  detector.py  model_registry.py
backend/app/ai/engines/: pci_engine.py  rule_engine.py
backend/app/ai/rag/: chunking.py  embeddings.py  knowledge_service.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  dependencies.py  logging.py  problem.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  (+10 more)
backend/app/repositories/: audit_repository.py  base.py  dashboard_repository.py  inspection_repository.py  report_repository.py  user_repository.py
backend/app/schemas/: ai_model.py  auth.py  dashboard.py  inspection.py  knowledge.py  recommendation.py  report.py
backend/app/services/: auth_service.py  dashboard_service.py  inspection_service.py  recommendation_service.py  report_service.py  storage_service.py
backend/app/workers/: analysis_worker.py  snapshot_job.py
backend/scripts/: register_model.py
backend/tests/: conftest.py  test_analysis_pipeline.py  test_auth.py  test_dashboard.py  test_detection.py  test_health.py  test_inspections.py  test_models.py  test_pci_engine.py  test_rag.py  test_recommendation_pipeline.py  test_reports.py  test_rule_engine.py
(+18 files in other folders)
